tests/ui/typeck/issue-104510-ice.stderr
error[E0412]: cannot find type `Oops` in this scope
  --> $DIR/issue-104510-ice.rs:4:21
   |
LL | struct W<T: ?Sized>(Oops);
   |                     ^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
